tests/baselines/reference/instanceQuery-0011.errors.txt
instanceQuery-0011.ts(21,8): error TS1360: Type 'instanceof A1 & A1' does not satisfy the expected type 'instanceof A2 & (A1 & A2)'.
  Constructor typeof A1 is not assignable to constructor typeof A2
instanceQuery-0011.ts(33,8): error TS1360: Type 'instanceof A2 & (A1 & A2)' does not satisfy the expected type 'AP'.
  Type 'A1 & A2' is not assignable to type 'AP'.
    Types of property 'a' are incompatible.
      Type 'number' is not assignable to type '1'.


==== instanceQuery-0011.ts (2 errors) ====
    namespace iq0010b {
        class EmptyBase {}
        class A1  extends EmptyBase{
            a: number|string = "";
        }
        class A2  extends A1 {
            a: number = 0;
        }
        class A3  extends A2 {
            a: 0 | 1 = 0;
        }
        class B3  extends A2 {
            a: 1 | 2 = 2;
        }
        type AQ = instanceof A1 & instanceof A2;
        declare let a1: instanceof A1;
        declare let a2: instanceof A2;
        declare let a3: instanceof A3;
        declare let b3: instanceof B3;
    
        a1 satisfies AQ; // error (because (typeof A1).constructor < (typeof A2).constructor)
           ~~~~~~~~~
!!! error TS1360: Type 'instanceof A1 & A1' does not satisfy the expected type 'instanceof A2 & (A1 & A2)'.
!!! error TS1360:   Constructor typeof A1 is not assignable to constructor typeof A2
        a2 satisfies AQ; // no error
        a3 satisfies AQ; // no error
        b3 satisfies AQ; // no error
    
        class AP  extends A2 {
            a: 1 = 1;
        };
    
        new AP() as instanceof AP satisfies AQ; // no error
    
        declare const aq: AQ;
        aq satisfies AP; // structure error
           ~~~~~~~~~
!!! error TS1360: Type 'instanceof A2 & (A1 & A2)' does not satisfy the expected type 'AP'.
!!! error TS1360:   Type 'A1 & A2' is not assignable to type 'AP'.
!!! error TS1360:     Types of property 'a' are incompatible.
!!! error TS1360:       Type 'number' is not assignable to type '1'.
    
        declare const ap: instanceof AP;
        ap satisfies AQ; // no error
    
    }